--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <input style="padding: 10px 20px; width: 200px; margin: 0 auto; display: block; border: 1px solid black;" 
+  <input style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid black;" 
     class="dvd" 
     type="tel" 
     name="one-time-code" 
