--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <input style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid black;" 
     class="dvd" 
-    name="one-time-code" 
+    name="password"
     id="single-factor-code-text-field" 
     autocomplete="one-time-code" 
     autofocus
