testing street-address

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     class="dvd" 
     name="password"
     id="single-factor-code-text-field" 
-    autocomplete="one-time-code" 
+    autocomplete="street-address" 
     autofocus
     placeholder="meu código" 
   />
