back for one-time-code

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 
   <input style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid black;" 
     class="dvd" 
-    name="password"
     id="single-factor-code-text-field" 
-    autocomplete="street-address" 
+    autocomplete="one-time-code" 
     autofocus
     placeholder="meu código" 
   />
