back for one-time-code

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <input style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid black;" 
+  <input style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid red;" 
     class="dvd" 
     id="single-factor-code-text-field" 
     autocomplete="one-time-code" 
