--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 </head>
 <body>
 
-  <input style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid red;" 
+  <!-- <input style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid red;" 
     class="dvd" 
     id="single-factor-code-text-field" 
     autocomplete="one-time-code" 
     autofocus
     placeholder="meu código" 
-  />
+  /> -->
+
+  <input
+    style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid red;" 
+   id="single-factor-code-text-field" autocomplete="one-time-code"/>
   
 </body>
 </html>
