--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 </head>
 <body>
+  <form>
 
   <!-- <input style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid red;" 
     class="dvd" 
@@ -17,9 +18,10 @@
     placeholder="meu código" 
   /> -->
 
-  <input
+    <input
     style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid red;" 
-   id="single-factor-code-text-field" autocomplete="one-time-code"/>
+    id="single-factor-code-text-field" autocomplete="one-time-code"/>
+  </form>
   
 </body>
 </html>
