--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <input
     style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid blue;" 
-    id="single-factor-code-text-field" autocomplete="one-time-code"/>
+    id="single-factor-code-text-field" autofocus autocomplete="one-time-code"/>
   </form>
   
 </body>
