--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   /> -->
 
     <input
-    style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid blue;" 
+    style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid green;" 
     id="single-factor-code-text-field" autofocus autocomplete="one-time-code"/>
   </form>
   
