--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 
   <main class="content mdc-top-app-bar--fixed-adjust">
-      <form id="phone-form" class="mdc-form-field mdc-form-field--align-end visible" action="/send" method="POST">
+      <!-- <form id="phone-form" class="mdc-form-field mdc-form-field--align-end visible" action="/send" method="POST">
         <div>
           <p id="unsupported" class="invisible red visible">
             Your browser does not support SMS Receiver API. To try out the API,
@@ -40,7 +40,7 @@
           <input type="button" id="copy" class="mdc-button mdc-ripple-upgraded" value="Copy">
           <input type="button" id="verify" class="mdc-button mdc-button--raised" value="Verify">          
         </div>
-      </form>
+      </form> -->
       <form id="otp-form" class="mdc-form-field mdc-form-field--align-end" action="/resend" method="POST">
         <h2>Verify your phone number</h2>
         <p>
