--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <span id="phone-number"></span>
         </p>
         <div id="otp-field" class="mdc-text-field mdc-ripple-upgraded mdc-text-field--invalid" style="--mdc-ripple-fg-size:118px; --mdc-ripple-fg-scale:1.82853; --mdc-ripple-fg-translate-start:115.141px, -33.6836px; --mdc-ripple-fg-translate-end:40px, -31px;">
-          <input type="number" id="otp-input" class="mdc-text-field__input" autocomplete="one-time-code" pattern="^([0-9]+)$" required="">
+          <input type="number" style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid purple;"  id="otp-input" class="mdc-text-field__input" autocomplete="one-time-code" pattern="^([0-9]+)$" required="">
           <div class="mdc-notched-outline mdc-notched-outline--upgraded">
             <div class="mdc-notched-outline__leading"></div>
             <div class="mdc-notched-outline__notch" style="">
