--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 
 </head>
 <body>
-  <!-- <form>
+  <form>
 
 
     <input
     style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid green;" 
     id="single-factor-code-text-field" autofocus autocomplete="one-time-code"/>
-  </form> -->
+  </form>
 
 
   <main class="content mdc-top-app-bar--fixed-adjust">
@@ -41,7 +41,7 @@
           <input type="button" id="verify" class="mdc-button mdc-button--raised" value="Verify">          
         </div>
       </form> -->
-      <form id="otp-form" class="mdc-form-field mdc-form-field--align-end" action="/resend" method="POST">
+      <!-- <form id="otp-form" class="mdc-form-field mdc-form-field--align-end" action="/resend" method="POST">
         <h2>Verify your phone number</h2>
         <p>
           Enter the 6-digit we sent to
@@ -67,7 +67,7 @@
           You are successfully signed in!
         </h2>
         <input type="button" id="back" class="mdc-button" value="Start over">
-      </form>
+      </form> -->
     </main>
   
 </body>
