--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
   <form>
 
-
+    <h1 style="margin-top: 50px; font-size: 16px; text-align: center; font-family: Arial;">Kick Code SMS - <span style="font-size: 12px; ">alpha</span></h1>
     <input
-    style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid green;" 
+    style="padding: 10px 20px; width: 200px; margin: 20px auto 0; display: block; border: 1px solid green;" 
     id="single-factor-code-text-field" autofocus autocomplete="one-time-code"/>
   </form>
 
