remove old code

--- a/index.html
+++ b/index.html
@@ -4,71 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Teste</title>
+  <title>Token</title>
 
 </head>
 <body>
   <form>
-
-    <h1 style="margin-top: 50px; font-size: 16px; text-align: center; font-family: Arial;">Kick Code SMS - <span style="font-size: 12px; ">alpha</span></h1>
+    <h1 style="margin-top: 50px; font-size: 16px; text-align: center; font-family: Arial;">Token</h1>
     <input
     style="padding: 10px 20px; width: 200px; margin: 20px auto 0; display: block; border: 1px solid green;" 
     id="single-factor-code-text-field" autofocus autocomplete="one-time-code"/>
   </form>
-
-
-  <main class="content mdc-top-app-bar--fixed-adjust">
-      <!-- <form id="phone-form" class="mdc-form-field mdc-form-field--align-end visible" action="/send" method="POST">
-        <div>
-          <p id="unsupported" class="invisible red visible">
-            Your browser does not support SMS Receiver API. To try out the API,
-            use Google Chrome 78 or later and enable chrome://flags/#enable-experimental-web-platform-features.
-          </p>
-        </div>
-        <h2>Select your browser, send following SMS message to this phone from another one after pressing "Verify".</h2>
-        <div class="mdc-select mdc-ripple-upgraded" style="--mdc-ripple-fg-size:106px; --mdc-ripple-fg-scale:1.84573; --mdc-ripple-fg-translate-start:91.5234px, -28.3086px; --mdc-ripple-fg-translate-end:35.5px, -25px;">
-          <i class="mdc-select__dropdown-icon"></i>
-          <select class="mdc-select__native-control">
-            <option value="xFJnfg75+8v" selected="">Chrome Beta</option>
-            <option value="EvsSSj4C6vl">Chrome Stable</option>
-          </select>
-          <label class="mdc-floating-label mdc-floating-label--float-above">Pick your browser</label>
-          <div class="mdc-line-ripple" style="transform-origin: 144px center;"></div>
-        </div>
-        <pre id="message">Your OTP is: 123456.<br><br>For: https://sms-receiver-demo.glitch.me/?otp=123456&amp;EvsSSj4C6vl</pre>
-        <div>
-          <input type="button" id="copy" class="mdc-button mdc-ripple-upgraded" value="Copy">
-          <input type="button" id="verify" class="mdc-button mdc-button--raised" value="Verify">          
-        </div>
-      </form> -->
-      <!-- <form id="otp-form" class="mdc-form-field mdc-form-field--align-end" action="/resend" method="POST">
-        <h2>Verify your phone number</h2>
-        <p>
-          Enter the 6-digit we sent to
-          <span id="phone-number"></span>
-        </p>
-        <div id="otp-field" class="mdc-text-field mdc-ripple-upgraded mdc-text-field--invalid" style="--mdc-ripple-fg-size:118px; --mdc-ripple-fg-scale:1.82853; --mdc-ripple-fg-translate-start:115.141px, -33.6836px; --mdc-ripple-fg-translate-end:40px, -31px;">
-          <input type="number" style="padding: 10px 20px; width: 200px; margin: 50px auto 0; display: block; border: 1px solid purple;"  id="otp-input" class="mdc-text-field__input" autocomplete="one-time-code" pattern="^([0-9]+)$" required="">
-          <div class="mdc-notched-outline mdc-notched-outline--upgraded">
-            <div class="mdc-notched-outline__leading"></div>
-            <div class="mdc-notched-outline__notch" style="">
-              <label for="otp-input" class="mdc-floating-label" style="">6-digit code</label>
-            </div>
-            <div class="mdc-notched-outline__trailing"></div>
-          </div>
-        </div>
-        <div class="align-to-right">
-          <input type="button" id="cancel" class="mdc-button" value="Cancel">
-          <input type="submit" id="continue" class="mdc-button mdc-button--raised" value="Continue">
-        </div>
-      </form>
-      <form id="success" class="mdc-form-field mdc-form-field__align-end">
-        <h2>
-          You are successfully signed in!
-        </h2>
-        <input type="button" id="back" class="mdc-button" value="Start over">
-      </form> -->
-    </main>
   
 </body>
 </html>
