--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     style="padding: 10px 20px; width: 200px; margin: 20px auto 0; display: block; border: 1px solid black;" 
     id="single-factor-code-text-field" autofocus autocomplete="one-time-code"/>
   </form>
+
+  <br><br>
+
+
+  <form>
+      <h1 style="margin-top: 50px; font-size: 16px; text-align: center; font-family: Arial;">Keyboard number</h1>
+      <input
+      style="padding: 10px 20px; width: 200px; margin: 20px auto 0; display: block; border: 1px solid black;" 
+      id="single-factor-code-text-field" type="tel" autofocus autocomplete="one-time-code"/>
+    </form>
   
 </body>
 </html>
