--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-  <form>
+  <form class="max-width: 450px;">
     <h1 style="margin-top: 50px; font-size: 16px; text-align: center; font-family: Arial;">Token</h1>
     <input
     style="padding: 10px 20px; width: 200px; margin: 20px auto 0; display: block; border: 1px solid black;" 
