--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 </head>
 <body>
 
-  <form class="max-width: 450px;">
+  <!-- <form class="max-width: 450px;"> -->
       <h1 style="margin-top: 50px; font-size: 16px; text-align: center; font-family: Arial;">Token</h1>
       <input
       maxLength="6"
       style="padding: 10px 20px; width: 200px; margin: 20px auto 0; display: block; border: 1px solid blue;" 
       id="single-factor-code-text-field" type="tel" autofocus autocomplete="one-time-code"/>
-    </form>
+
+      <input
+      maxLength="6"
+      style="padding: 10px 20px; width: 200px; margin: 20px auto 0; display: block; border: 1px solid blue;" 
+      id="single-factor-code-text-field" type="tel" autofocus autocomplete="one-time-code"/>
+    <!-- </form> -->
   
 </body>
 </html>
